tests/baselines/reference/0002_测试.errors.txt
/a/测试_1.ts(19,18): error TS2345: Argument of type '{ 属性1: string; P2: { Name: string; Text: string; }; }' is not assignable to parameter of type '库内接口'.
  Property '属性2' is missing in type '{ 属性1: string; P2: { Name: string; Text: string; }; }'.


==== /a/node_modules/@types/kuCh/index.d.ts (0 errors) ====
    //@@{ 库内接口:ku, 属性1:P1, 属性2:P2, 名称:Name, 内容:Text, 选项:ops }
    导出 接口 库内接口 {
        属性1: 文字
        属性2: { 名称: 文字, 内容: 任意 }
    }
    导出 种类 库内类 实现 库内接口{
        属性1: 文字
        属性2: { 名称: 文字, 内容: 任意 }
        构造(选项:库内接口)
    }
==== /a/测试_1.ts (1 errors) ====
    导入 { 库内接口, 库内类 } 来自 "kuCh"
    
    变量 试验_1: 库内接口 = {
        属性1: "我是属性1,也是P1",
        属性2: { 名称: "我是属性2,也是P2", 内容: "我是任意内容" }
    }
    
    变量 属性1 = "我是试验 2"
    变量 Text = "我是变量内容"
    变量 Name = "我是属性2,也是P2"
    
    变量 P2 = { Name, Text }
    
    变量 试验_2 = { 属性1, P2 }
    
    变量 试验_3 = 新建 库内类(试验_1)
    试验_3
    
    变量 试验_4 = 新建 库内类(试验_2)
                     ~~~~
!!! error TS2345: Argument of type '{ 属性1: string; P2: { Name: string; Text: string; }; }' is not assignable to parameter of type '库内接口'.
!!! error TS2345:   Property '属性2' is missing in type '{ 属性1: string; P2: { Name: string; Text: string; }; }'.
    试验_4